--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<button onclick="findFirstNonRepeatedChar()">Find First Non-Repeated Character</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
